--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,29 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="navbar navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<a href="#" class="brand">Treebook</a>
 
-<%= yield %>
+			
+				<ul class="nav">
+					<li><%= link_to "All Statuses", statuses_path %></li>
+				</ul>
+	
+			</div>
+		</div>
+	</div>
 
+
+<div class="container">
+	
+	<%= yield %> 
+
+</div>
+	
+
+
+<div>Footer</div>
 </body>
 </html>
